<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Voxel Visage</string>
    <string name="load_sample">Load Sample</string>
    <string name="read_permission_failed">Please allow read permission to open model files.</string>
    <string name="open_model">Open model…</string>
    <string name="open_model_success">Model loaded successfully.</string>
    <string name="open_model_error">Failed to load model: %s</string>
    <string name="view_vr">View in VR mode</string>
    <string name="view_vr_not_loaded">Please load a model first.</string>
    <string name="settings">Settings</string>
    <string name="reset_view">Reset View</string>
    <string name="app_share" tools:ignore="ExtraTranslation">Share App</string>
    <string name="change_background">change background</string>
</resources>
