<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_open_model"
        android:icon="@drawable/ic_folder_open_white_24dp"
        android:title="@string/open_model"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item android:id="@+id/menu_load_sample"
        android:title="@string/load_sample"
        app:showAsAction="never" />
    <item android:id="@+id/menu_reset_view"
        android:title="@string/reset_view"
        app:showAsAction="never" />
    <item android:id="@+id/menu_share_app"
        android:title="@string/app_share"
        app:showAsAction="never" />
    <item android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
